<resources>
    <string name="app_name">MoonQuizz</string>
    <string name="theme">Theme</string>
    <string name="moonquizz">MoonQuizz</string>
    <string name="felicitation_bonne_reponse">Bravo! Tu as trouvé la bonne réponse!</string>
    <string name="felicitation_texte">Tiens ! Tu as gagné un cookie!</string>
    <string name="question_suivante">Question Suivante</string>
    <string name="menu_question_btn">Menu question</string>
    <string name="deux_points">:</string>
    <string name="ex_niveau">Niveau</string>
    <string name="question">Question</string>
    <string name="qui_est_tu">Qui est tu?</string>
    <string name="ex_joueur">joueur</string>
</resources>